Nuevas clases e imágenes para el detalle de actividad formativa y la actividad para el webview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="cuenta_actividades">%d actividades</string>
     <string name="update">Actualizando datos&#8230;</string>
     <string name="no_results">No se han encontrado resultados</string>
+    <string name="title_activity_web_content">WebContentActivity</string>
+    <string name="loading">cargando</string>
+    <string name="title_activity_detalle_actividad">DetalleActividad</string>
+
 </resources>
